# Backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  data.json  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  slim.report.json
.claude/: settings.json
.github/workflows/: deploy_transplantwebapp.yml  frontend.yml  main.yml  main_transplantwebapp.yml  staging.yml
docs/: donation_docs.py  user_docs.py
donation/: admin.py  apps.py  donations.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
donation/migrations/: 0001_initial.py  0002_alter_donor_zip_code.py  0003_alter_donationprocess_finished_at.py  0004_remove_donor_city_remove_donor_health_condition_and_more.py  0005_donationresponse_question_remove_donor_user_and_more.py  0006_remove_donation_organ_donation_donation_type.py  0007_remove_donation_donation_type_donation_organ.py  0008_remove_donation_organ_donation_donation_type.py  0009_alter_question_id.py  0010_alter_user_options.py  0011_alter_user_options.py  0012_alter_user_options.py  0013_alter_user_options.py  0014_alter_user_hospital_name_alter_user_is_hospital_and_more.py  0015_alter_user_hospital_name.py  0016_alter_user_hospital_name_alter_user_is_hospital.py  0017_alter_user_is_hospital.py  (+7 more)
donation/urls/: donor_urls.py  (+2 more)
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
tests/: test_donation_views.py  test_user_views.py
transplantApp/: asgi.py  deployment.py  settings.py  urls.py  wsgi.py
(+57 files in other folders)
